--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ mlr_1.2:
 - add fix.factors option to randomForest
 - generic standard error estimation in randomForest and BaggingWrapper
 - added fixup.data option to task contructors, so basic data cleanup can be performed
+
 - new learners:
 -- classif.LiblineaRBinary
 -- classif.LiblineaRLogReg
@@ -24,10 +25,20 @@ mlr_1.2:
 -- surv.CoxBoost
 -- surv.coxph
 -- surv.glmnet
+
+- new measures
+-- cost sens ????
+-- multiauc???
+
 - new functions
 -- oversample, undersample
 -- makeOversampleWrapper, makeUndersampleWrapper
 -- removeConstantFeatures
+-- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
+
+- imputation stuff ????
+- surv stuff ????
+- <really check logs!>
 
 mlr_1.1:
 - Initial release to CRAN
