--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ mlr_1.2:
 - added fixup.data option to task contructors, so basic data cleanup can be performed
 
 - new learners:
+-- classif.knn
 -- classif.LiblineaRBinary
 -- classif.LiblineaRLogReg
 -- classif.LiblineaRMultiClass
