tutorial: improve first 2 sections

--- a/doc/tutorial/learner.Rmd
+++ b/doc/tutorial/learner.Rmd
@@ -2,84 +2,51 @@ Learners
 ========
 
 These classes provide a unified interface to all
-classification/regression methods in R. Some are already integrated,
+classification and regression methods in R. Some are already integrated,
 others are not, but the package is specifically designed to make
 extensions simple. If one of your favorite methods is missing, either
 send the **mlr** maintainers an email or see the part of the tutorial
 on [how to extend the package yourself](create_learner.md).
-  
-To see which learners are already implemented, have a look at the
-[learners](http://berndbischl.github.io/mlr/man/learners.html) documentation page.
 
-Generally, you have two options to access the learning algorithms in **mlr**. 
-Either by passing the name as a string to the appropriate method, e.g. [train](http://berndbischl.github.io/mlr/man/train.html), 
-or by constructing a [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) object explicitly by means of the
-[makeLearner](http://berndbischl.github.io/mlr/man/makeLearner.html) factory method. 
+To see which learners are already implemented, have a look at the \man[learners] documentation page.
 
-Why construct a [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) object? 
+A learner in **mlr** is constructed by calling \man[makeLearner].
+In the constructor you have the following options:
 
-* You have to create a [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) object if you want to pass hyperparameter values other than the default values.
-* You have the opportunity to set an ID, which is quite useful if you conduct larger experiments and need to access results of a certain learning method.
-* For classification tasks you have to create a [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) object if you want to control the type of [prediction](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html) which is returned. Per default you get the class labels when making a [prediction](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html). In order to get posterior probabilities you have to specify this when creating the learner.
-
-The [makeLearner](http://berndbischl.github.io/mlr/man/makeLearner.html) factory method takes the names of the learning method as 
-its first argument. The naming conventions are ``classif.<R_method_name>`` for 
-classification methods and ``regr.<R_method_name>`` for regression methods.
-The names of all learning methods are listed on the [learners](http://berndbischl.github.io/mlr/man/learners.html) documentation page.
-
-
-Classification example
-----------------------
+* Setting hyperparameters.
+* Setting the ID to name the object (some methods will later use this ID to name results).
+* Controlling the output for later prediction, e.g., for classification,
+  whether you want a factor for predicted classes or numerical probabilities.
 
 ```{r}
-library("mlr")
-lrn = makeLearner("classif.rpart")
-lrn
-```                 
+# classifier, set it up for prediction probabilities
+lrn = makeLearner("classif.rpart", predict.type = "prob")
+# regression
+lrn = makeLearner("regr.rpart")
+# gradient boosting machine with hyperparameters and custon name
+lrn = makeLearner("regr.gbm", id = "mygbm", n.trees = 500, interaction.depth = 3)
+```
 
-The generated learner is an object of class [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html). It contains basic 
-information about the learning method like the chosen hyperparameter values 
-(if specified) and the type of [prediction](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html) that will be made by this learner.
-Moreover, it provides information about the types of classification problems 
-and properties of the data the learning method can deal with. For example,
-it states, if two- or multi-class problems are supported and if it can cope 
-with case weights or missing values.
-
+The first argument defines the underlying algorithm from R.
+The naming conventions are ``classif.<R_method_name>`` for
+classification methods and ``regr.<R_method_name>`` for regression methods.
+The names of all learning methods are listed on the \man[learners] help page.
 The tables in [IntegratedLearners](../integrated_learners.md) provide a survey about these properties for
 all integrated learning methods.
 
-Now let's create a [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) and additionally specify hyperparameter values and 
-an ID.
+Further information
+-------------------
+
+The generated learner is an object of class \man2[Learner][makeLearner].
+It contains the properties the method, e.g, which features it can handle,
+what can be output during prediction, whether multi-class problems,
+observations weights or missing values are supported and so on.
 
 ```{r}
-lrn = makeLearner("classif.rpart", minsplit = 7, cp = 0.03, id = "myrpart")
+# classifier, set it up for prediction probabilities
+lrn = makeLearner("classif.rpart", predict.type = "prob", minsplit = 20)
 lrn
-```
-
-This is how to get posterior probabilities when making a [prediction](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html).
-
-```{r}
-lrn = makeLearner("classif.rpart", predict.type = "prob")
-lrn
-```
-
-
-Regression example
-------------------
-
-Create a rpart [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) for regression. 
-
-```{r}
-lrn = makeLearner("regr.rpart")
-lrn
-```                 
-
-Finally, let's create a Gradient Boosting Machine [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) and pass hyperparameters
-and an ID.
-
-```{r}
-lrn = makeLearner("regr.gbm", n.trees = 500, distribution = "laplace", interaction.depth = 3,
-                   id = "mygbm")
-lrn
+# display stored information for hyperparameters
+lrn$par.set
 ```
 
