--- a/doc/tutorial/task.Rmd
+++ b/doc/tutorial/task.Rmd
@@ -3,23 +3,15 @@ Learning Tasks
 
 Learning tasks are the basic elements of the package to encapsulate the
 data set and all relevant information regarding the purpose of the
-task. This will be at least the target variable, but might also be
-information about excluded (ID) variables or case weights.
+task, e.g, the target variable.
 
-Currently two subclasses of a [LearnTask](http://berndbischl.github.io/mlr/man/makeLearner.html) exist: [ClassifTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html) for
-classification and [RegrTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html) for regression problems.  A
-classification task is created by using the [makeClassifTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html) factory
-method. The target variable is converted to a ``factor``, if it is a
-``logical``, ``integer`` or ``character`` vector. Accordingly use [makeRegrTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html)
-in order to define a regression task. The target variable is converted 
-to a ``numeric``.
+Currently two subclasses of a \man[SupervisedTask] exist: \man2[ClassifTask][SupervisedTask] for
+classification and \man2[RegrTask][SupervisedTask] for regression problems.
+We are also working on survival analysis and a general definition of cost-sensitive learning.
+A classification task is created by using \man2[makeClassifTask][SupervisedTask],
+\man2[makeRegrTask][SupervisedTask] is used for regression task.
 
-Quick start
------------
-
-### Classification example
-
-In the following example we define a classification task for the data
+In the following example, we define a classification task for the data
 set ``BreastCancer`` (from the package mlbench) and exclude the ID
 variable from all further model fitting and evaluation.
 
@@ -30,140 +22,73 @@ data(BreastCancer)
 
 df = BreastCancer
 df$Id = NULL
-task = makeClassifTask(id = "BreastCancer", data = df, target = "Class")
-``` 
-
-Now, let us examine the created task:
-
-```{r}
-task
-``` 
-
-The now defined task contains basic information about the data,
-e.g. the types of the features, the number of observations and the number
-of missing values, as well as the classification problem, e.g. the
-name of the target variable and the number of observations per class.
-
-
-### Regression example
-
-We will generally take the ``BostonHousing`` data set as regression example.
-
-```{r}
-library("mlr")
-library("mlbench")
-data(BostonHousing)
-df = BostonHousing
-task = makeRegrTask(id = "BostonHousing", data = df, target = "medv")
-task
+classif.task = makeClassifTask(id = "BreastCancer", data = df, target = "Class")
+classif.task
 ```
 
+As we can see, the task records basic information about the data set,
+e.g., the types of the features, the number of observations, whether
+missing values are present, the number of observations per class and so on.
+
+
+In many of the following regression examples we will use the ``BostonHousing`` data set:
+
+```{r}
+data(BostonHousing)
+regr.task = makeRegrTask(id = "BostonHousing", data = BostonHousing, target = "medv")
+regr.task
+```
 
 Further information
 -------------------
 
-### Classification example
-
 Let's have another look at the classification example.
 
-```{r}
-library("mlr")
-library("mlbench")
-data(BreastCancer)
-
-df = BreastCancer
-df$Id = NULL
-task = makeClassifTask(id = "BreastCancer", data = df, target = "Class")
-task
-``` 
-
 As this is a binary problem, we see that a positive class is selected
-by default. This will generally be the first class in the factor
-levels of the target. You probably want to select this manually for
-your applications.
+by default. This will generally be auto-selected, but you might
+want to do this manually for your application. It mainly concerns ROC analysis, where in order
+to talk about something like a true positive rate, we need to know which of the two classes is the positive
+one.
 
 ```{r}
-task = makeClassifTask(id = "BreastCancer", data = df, target = "Class", 
-                        positive = "malignant")
-``` 
-
-The [makeClassifTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html) help page lists several other arguments that can be 
-passed to describe further details of the classification problem.
-
-There are some convenient methods to access properties of the data
-set and the classification problem. Look at the documentation of the
-[LearnTask](http://berndbischl.github.io/mlr/man/makeLearner.html) class and its subclasses [ClassifTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html) and [RegrTask](http://berndbischl.github.io/mlr/man/SupervisedTask.html), if
-you are interested in the kind of "getter"-functions, which are
-available. Here are some examples:
-
-Get the names of the input variables.
-
-```{r}
-getTaskFeatureNames(task)
+classif.task = makeClassifTask(id = "BreastCancer", data = df, target = "Class",
+  positive = "malignant")
 ```
 
-Get values of the target variable for all observations.
+There are also some convenient methods to access properties and parts of the task.
+The most important ones are listed in \man[SupervisedTask].
+
+Here are some examples.
+
 
 ```{r}
-head(getTaskTargets(task))
+# get the names of the input variables:
+getTaskFeatureNames(classif.task)
+
+# get values of the target variable for all observations:
+head(getTaskTargets(classif.task))
+head(getTaskTargets(regr.task))
+
+# accessing the data set:
+str(getTaskData(classif.task))
 ```
 
-All information can be obtained from the slots of the [LearnTask](http://berndbischl.github.io/mlr/man/makeLearner.html)
-object directly.
+Note the many options \man[getTaskData] provides to convert the data set into a covenient format.
+This is especially handy when you integrate a learner from another package into mlr.
 
-The main part of the information is stored in the slot called `desc`,
-which stands for description. (`task$task.desc` is an object of class [TaskDesc](http://berndbischl.github.io/mlr/man/TaskDesc.html).)
-
-```{r}
-task$task.desc
-str(task$task.desc)
-``` 
-
-Optionally, we can include further information like a blocking factor 
-into the task. Via the blocking argument you can specify if some 
-observations "belong together". Specifically, they are either put all
-in the training or the test set during a resampling iteration. The
-blocking argument is a factor of the same length as the number of
-observations in the data set, where observations with the same factor
-level belong to the same block.
-
-Now, let's include a (nonsensical) blocking structure:
+If you are more technically inclined, you could also directly access
+the information stored in the slot called `task$task.desc`,
+which stands for "description" and is of class \man[TaskDesc].
 
 ```{r}
-blocking = factor(rep(1:3, nrow(BreastCancer)/3))
-task = makeClassifTask(id = "BreastCancer", data = df, target = "Class", 
-                      blocking = blocking)
-head(task$blocking)
-table(task$blocking)
-``` 
-
-From this classification task we can now train various models, which
-will be covered in the section [Training](train.md).
-Before that, let's look at the regression experiment again.
-
-
-### Regression example
-
-```{r}
-library("mlr")
-library("mlbench")
-data(BostonHousing)
-task = makeRegrTask(data = BostonHousing, target = "medv")
-task
+str(classif.task$task.desc)
 ```
 
-The "getter" functions work analogous to the classification example.
+The \man[SupervisedTask] help page also lists several other arguments
+to describe further details of the problem.
 
-```{r}
-getTaskFeatureNames(task)
-
-head(getTaskTargets(task))
-```
-
-Inspect [TaskDesc](http://berndbischl.github.io/mlr/man/TaskDesc.html).
-
-```{r}
-task$task.desc
-str(task$task.desc)
-``` 
+E.g., we could include a blocking factor into the task.
+This would tell the task that some observations "belong together", so they are either put all
+in the training or the test set during a resampling iteration.
+Or you could weight observations according to their importance.
 
