mayor changes in filter and FilterWrapper

--- a/NEWS
+++ b/NEWS
@@ -34,6 +34,8 @@ mlr_1.2:
 - new functions
 -- oversample, undersample
 -- makeOversampleWrapper, makeUndersampleWrapper
+-- filter
+-- makeFilterWrapper
 -- removeConstantFeatures
 -- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
 -- holdout, subsample, crossval, repcv, bootstrapOOB, bootstrapB632, bootstrapB632plus
