update of man-pages and tutorial

--- a/doc/tutorial/feature_selection.Rmd
+++ b/doc/tutorial/feature_selection.Rmd
@@ -31,7 +31,7 @@ In a proper experimental set up you might want to automate the selection of the 
 We will use the standard 10-fold cross validation.
 ```{r}
 learner = makeLearner("classif.fnn")
-learnerFiltered = makeFilterWrapper(learner=learner, fw.method="information.gain", fw.perc=0.7)
+learnerFiltered = makeFilterWrapper(learner=learner, fw.method="information.gain", fw.percentage=0.7)
 rdesc = makeResampleDesc("CV", iters=10) 
 rsres = resample(learner=learnerFiltered, task=task, resampling=rdesc, show.info=FALSE, models=TRUE)
 rsres$aggr
