--- a/NEWS
+++ b/NEWS
@@ -39,6 +39,7 @@ mlr_1.2:
 -- removeConstantFeatures
 -- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
 -- holdout, subsample, crossval, repcv, bootstrapOOB, bootstrapB632, bootstrapB632plus
+-- showHyperPars
 
 - imputation stuff ????
 - surv stuff ????
