visualizeLearner: unit test

--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,7 @@ mlr_1.2:
 -- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
 -- holdout, subsample, crossval, repcv, bootstrapOOB, bootstrapB632, bootstrapB632plus
 -- showHyperPars
+--  visualizeLearner
 
 - imputation stuff ????
 - surv stuff ????
