add downsampling (Wrapper, data.frame, task, ResampleInstance)

--- a/NEWS
+++ b/NEWS
@@ -40,7 +40,9 @@ mlr_1.2:
 -- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
 -- holdout, subsample, crossval, repcv, bootstrapOOB, bootstrapB632, bootstrapB632plus
 -- showHyperPars
---  visualizeLearner
+-- visualizeLearner
+-- downsample
+-- makeDownsampleWrapper
 
 - imputation stuff ????
 - surv stuff ????
