Adjustments to FeatSel tutorial

--- a/doc/tutorial/feature_selection.Rmd
+++ b/doc/tutorial/feature_selection.Rmd
@@ -16,14 +16,14 @@ The function is given a `task` and simply returns an importance vector.
 ```{r}
 library("mlr")
 task = makeClassifTask(data=iris, target="Species")
-importance = getFeatureFilterValues(task, method="information.gain")
-sort(importance, decreasing=TRUE)
+importance = getFilterValues(task, method="information.gain")
+importance
 ```
 So according to this filter `Petal.Width` and `Petal.Length` contain the most *information*.
 With **mlr**'s function `filterFeatures()` you can now filter the task by leaving out all
 but a set number of features with the highest feature importance now into the task. 
 ```{r}
-filtered.task = filterFeatures(task, method="information.gain", n=2)
+filtered.task = filterFeatures(task, method="information.gain", select="abs", val=2)
 ```
 Other filter options in `filterFeatures()' are to require a percentage of features filtered instead or to set a threshold for the numerical importance values.
 
@@ -31,7 +31,7 @@ In a proper experimental set up you might want to automate the selection of the 
 We will use the standard 10-fold cross validation.
 ```{r}
 learner = makeLearner("classif.fnn")
-learnerFiltered = makeFilterWrapper(learner=learner, fw.method="information.gain", fw.percentage=0.7)
+learnerFiltered = makeFilterWrapper(learner=learner, fw.method="information.gain", fw.select="perc", fw.val=0.7)
 rdesc = makeResampleDesc("CV", iters=10) 
 rsres = resample(learner=learnerFiltered, task=task, resampling=rdesc, show.info=FALSE, models=TRUE)
 rsres$aggr
@@ -52,8 +52,8 @@ library("mlbench")
 data(Sonar)
 task = makeClassifTask(data = Sonar, target = "Class", positive = "M")
 lrn = makeLearner("classif.rpart")
-lrnFiltered = makeFilterWrapper(learner=lrn, fw.method="chi.squared", fw.threshold=0)
-ps = makeParamSet(makeDiscreteParam("fw.threshold", values = seq(from=0.2, 0.4, by=0.05)))
+lrnFiltered = makeFilterWrapper(learner=lrn, fw.method="chi.squared", fw.select="threshold", fw.val=0)
+ps = makeParamSet(makeDiscreteParam("fw.val", values = seq(from=0.2, 0.4, by=0.05)))
 tuneRes = tuneParams(lrnFiltered, task=task, resampling=makeResampleDesc("CV", iters=5), par.set=ps, control=makeTuneControlGrid())
 ```
 
